--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,9 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Maven template
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-### Java template
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/node_modules
+/dist
+/.tmp
+/.sass-cache
+/bower_components
 
 .idea
-*.iml
-src/main/resources/application-production.yml
-deploy.py
-deploy.sh
 frontdeploy.sh
+*.iml
